2002-01-02  Josh Barrow  <drleary@mac.com>

	* glines.c: (load_image), (draw_box), (draw_ball), (expose_event),
	(game_maybe_quit), (game_about_callback), (load_theme_cb),
	(fill_menu), (game_props_callback), (game_quit_callback),
	(save_state), (main):
	Ported to use non-deprecated functions.

2001-12-19  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:
	* glines.desktop:

	Install into the proper location and add a Categories
	field.
	
2001-12-04  Duarte Loreto <happyguy_pt@hotmail.com>

        * glines.desktop: Added Portuguese (pt) translation.

2001-12-04  Kevin Vandersloot <kfv101@psu.edu>

	* glines.c: When starting a new game flash a simple message
	indicating how to score this game since I could never
	figure out how this game worked - Thanks Iain for showing
	me how :)

2001-08-18  Matthias Warkus  <mawarkus@gnome.org>

	* glines.png: New icon by Timothy Musson, added by permission of
	              the maintainer.

2001-07-27  Abel Cheung  <maddog@linux.org.hk>

	* glines.desktop: Added traditional Chinese translation.

2001-07-06  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* glines.c: Sayonara imlib.

2001-07-05  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* glines.c (load_image): Fix typo.

2001-06-26  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* glines.c (load_image): Remove more useless code. Use a dialog
	  instead of a printf if we can't find the images. Also fix a ugly
	  check.
	  (set_selection), (set_selection1), (free_str), (fill_menu): This
	  stuff was doing some really nasty things.

2001-06-26  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* glines.c (load_properties): Remove pointless code.

2001-06-11  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	Apply part of a patch from drk@sgi.com

	* glines.c: (load_properties): Add void in the declaration.
	  (main): Correct the call to load_properties(), Remove c++ style
	  comment.

2001-05-30  Juan Pablo Mendoza <pablo_juan@yahoo.com>
